--- a/index.html
+++ b/index.html
@@ -131,11 +131,15 @@
 								<!--  Evening 2 Half water Tank (Around 7:00 PM To 8:00 PM)  -->
 							</p>
 
-							<p> Daily Water Supply Timing </p>
+							<p style="color: rgb(6, 151, 38)"> Adhyaksha - Rakesh ji </p>
+							<p style="color: rgb(6, 151, 38)"> Upadhyaksha - Gajendra ji </p>
+							<p style="color: rgb(6, 151, 38)"> koshaadhyaksha - Surendra Ji </p>
+							<!--
+								<p> Daily Water Supply Timing </p>
 							
 							<p>Morning - 7:00 AM To 8:00 AM </p>
 							<p>Evening - 6:00 PM To 6:30 PM.</p>
-
+							-->
 							<!--
 							<p style="color: red">* The evening water supply shall be
 								subjected to the availability of sufficient quantity of water.</p>
