--- a/CarParkingOwner.html
+++ b/CarParkingOwner.html
@@ -26,7 +26,7 @@
                     <div class="row">
                         <div class="col-md-8 col-sm-8 col-xs-12">
                             <div class="contact">
-                                <p><span class="phone"><a href="#"></a></span><span class="email"><a href="#">Email: shubhvilla.residents@gmail.com</a></span></p>
+                                <p><span class="phone"><a href="#"></a></span><img src="img/logo1.png" alt="" width="60px" heigt="25px><span class="email"><a href="#">Email: shubhvilla.residents@gmail.com</a></span></p>
                             </div>
                         </div>
                        
@@ -71,7 +71,7 @@
                         <div class="footer-text one">
                             <h3>CONTACT US</h3>
                             <ul>
-                                <li><a href="#"><i class="material-icons">location_on</i>Shubh Villa, Narayan Vihar,Jaipur - 302020</a></li>
+                                <li><a href="#"><i class="material-icons">location_on</i>Shubh Villa, Narayan Vihar, Jaipur - 302020</a></li>
                                 <li><a href="#"><i class="material-icons">email</i>shubhvilla.residents@gmail.com</a></li>
                                 <!--<li><a href="#"><i class="material-icons">call </i>9820684534</a></li>-->
                             </ul>
