--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<a href="#">
 								<div class="main-logo">
 									<!--<img src="img/logo1.png" alt="" width="100px" heigt="50px>-->
-									<h2>Shub Villa</h2>
+									<h2>Shubh Villa</h2>
 								</div>
 							</a>
 						</div>
@@ -56,8 +56,8 @@
 									
 									<!--<li><a href="COVID19.html">COVID - 19</a></li>-->
 									<li><a href="OwnersRentDetails.html">Owners\Tenants Details</a></li>
-									<li><a href="MonthlyMaintenance.html">Monthly Maintenance</a></li>
-									<li><a href="OneTimeCollection.html">One Time Collection</a></li>
+									<li><a href="MonthlyMaintenance.html">Society Activity Fund</a></li>
+									<!--<li><a href="OneTimeCollection.html">One Time Collection</a></li>-->
 									<li><a href="MeetingHistory.html">Meeting History</a></li>
 									<!--<li><a href="VisitorDetails.html">Visitor Details</a></li>-->
 									<!--<li><a href="OCDinner.html">OC Status</a></li>-->
@@ -178,8 +178,22 @@
 
 		<section class="our_activity">
 			<h2>OUR ACTIVITY</h2>
-			<p>Shub Villa 'Festival & Celebrations'.</p>
+			<p>Shubh Villa 'Festival & Celebrations'.</p>
 			<div class="container">
+				<h4 font size="8"style="color: rgb(47, 11, 226)"> Following festival were identified for celebration in society</div></H4>
+
+				<p style="color: rgb(6, 151, 38)">1.	Paush Bada (Any date between 1st of JAN to 14th JAN) [Menu Halwa+Bada+Puri+Sabji for colony members and dona Prasadi for others]</p>
+				<p style="color: rgb(6, 151, 38)">2.	Republic day: Flag hoisting and laddu distribution</p>
+				<p style="color: rgb(6, 151, 38)">3.	Mahashivaratri: Mandir decoration and Pooja </p>
+				<p style="color: rgb(6, 151, 38)">4.	Holi Milan: Combined Holi celebration (Color and Thandai to be arranged by cultural committee)+Dinner+ DJ</p>
+				<p style="color: rgb(6, 151, 38)">5.	Ramnavmi Chetra: decoration and panchamrat and dona prasadi</p>
+				<p style="color: rgb(6, 151, 38)">6.	Van mahotsav : Tree plantation by kids in colony aur near by area in first week of July</p>
+				<p style="color: rgb(6, 151, 38)">7.	Janmashtami : Mandir decoration +Panchaarat and dona prasadi</p>
+				<p style="color: rgb(6, 151, 38)">8.	Independence day: Flag hoisting and laddu distribution</p>
+				<p style="color: rgb(6, 151, 38)">9.	Ganesh Chaturthi : Ganesh Sthapna for 1 day and visarjan with DJ</p>
+				<p style="color: rgb(6, 151, 38)">10.	Vijayadashmi/Dussehara : Rawan Dahan</p>
+				<p style="color: rgb(6, 151, 38)">11.	Dipawali Milan : Annakut mhotsav within 15 days from diwali </p>
+
 				<div class="row">
 					<div class="col-md-4 col-xs-12">
 						<div class="single-Promo">
@@ -187,11 +201,10 @@
 								<i class="material-icons">account_balance</i>
 							</div>
 							<h2>
-								<a href="#">Ganpati Celebrations</a>
+								<a href="#">Ram Navmi</a>
 							</h2>
-							<p>Ganesh Chaturthi, also known as Vinayaka Chaturthi, is a
-								Hindu festival celebrating the arrival of Ganesha to earth from
-								Kailash Parvat with his mother goddess Parvati/Gauri.</p>
+							<p>Ram navmi, is a Hindu festival that celebrates the birthday of Rama, 
+								the seventh avatar of the deity Vishnu.</p>
 						</div>
 					</div>
 					<div class="col-md-4 col-xs-12">
@@ -233,7 +246,7 @@
 							<h3>CONTACT US</h3>
 							<ul>
 								<li><a href="#"><i class="material-icons">location_on</i>
-									Shub Villa, Narayan Vihar,Jaipur - 302020</a></li>
+									Shubh Villa, Narayan Vihar,Jaipur - 302020</a></li>
 										<li><a href="#"><i class="material-icons">email</i>shubhvilla.residents@gmail.com</a></li>
 										<!--<li><a href="#"><i class="material-icons">call </i>9820684534</a></li>-->
 							</ul>
