--- a/ContactForm.html
+++ b/ContactForm.html
@@ -26,7 +26,7 @@
                     <div class="row">
                         <div class="col-md-8 col-sm-8 col-xs-12">
                             <div class="contact">
-                                <p><span class="phone"><a href="#"></a></span><span class="email"><a href="#">Email: shubhvilla.residents@gmail.com</a></span></p>
+                                <p><span class="phone"><a href="#"></a></span><img src="img/logo1.png" alt="" width="60px" heigt="25px><span class="email"><a href="#">Email: shubhvilla.residents@gmail.com</a></span></p>
                             </div>
                         </div>
 
