--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
-    <link rel="shortcut icon" href="img/logo1.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo1.png" type="image/x-icon">
 </head>
 
 <body onload="getOwnerDetails()">
@@ -26,7 +26,7 @@
                     <div class="row">
                         <div class="col-md-8 col-sm-8 col-xs-12">
                             <div class="contact">
-                                <p><span class="phone"><a href="#"></a></span><span class="email"><a href="#">Email: shubhvilla.residents@gmail.com</a></span></p>
+                                <p><span class="phone"><a href="#"></a></span><img src="img/logo1.png" alt="" width="60px" heigt="25px><span class="email"><a href="#">Email: shubhvilla.residents@gmail.com</a></span></p>
                             </div>
                         </div>
 
