--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -152,6 +152,7 @@
      list.push("Villa-65,@Jalaj Rajpurohit,@9820684534,@Owner");
      list.push("Villa-67,@Abhishek Jaiman,@9414054353,@Owner"); 
      list.push("Villa-68,@Shrish Jaiman,@9887629361,@Owner"); 
+     list.push("Villa-69,@Piyush,@9828487854,@Owner"); 
     
       
      generateTable(list)
