--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
 								<!--  Evening 2 Half water Tank (Around 7:00 PM To 8:00 PM)  -->
 							</p>
 
-							<p style="color: rgb(6, 151, 38)"> Adhyaksha - Rakesh ji </p>
-							<p style="color: rgb(6, 151, 38)"> Upadhyaksha - Gajendra ji </p>
-							<p style="color: rgb(6, 151, 38)"> koshaadhyaksha - Surendra Ji </p>
+							<p style="color: rgb(6, 151, 38)"> Adhyaksha - ABC ji </p>
+							<p style="color: rgb(6, 151, 38)"> Upadhyaksha - XYZ ji </p>
+							<p style="color: rgb(6, 151, 38)"> koshaadhyaksha - MNO Ji </p>
 							<!--
 								<p> Daily Water Supply Timing </p>
 							
