--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -153,6 +153,7 @@
      list.push("Villa-67,@Abhishek Jaiman,@9414054353,@Owner"); 
      list.push("Villa-68,@Shrish Jaiman,@9887629361,@Owner"); 
      list.push("Villa-69,@Piyush,@9828487854,@Owner"); 
+     list.push("Villa-73,@Richa Sharma,@9811547001,@Owner"); 
     
       
      generateTable(list)
