--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -208,7 +208,7 @@
   list.push("	Villa-70	,,,,,");
   list.push("	Villa-71	,,,,,");
   list.push("	Villa-72	,,,,,");
-  list.push("	Villa-73	,,,,,");
+  list.push("	Villa-73	,Richa Sharma,,,,");
   list.push("	Villa-74	,,,,,");
   list.push("	Villa-75	,,,,,");
   list.push("	Villa-76	,,,,,");
