--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -180,7 +180,7 @@
   list.push("	Villa-42	,,,,,");
   list.push("	Villa-43	,Arun Tripathi,,,,");
   list.push("	Villa-44	,Ravindra Verma,,,,,");
-  list.push("	Villa-45	,Nandsingh Rajawat,500,,,");
+  list.push("	Villa-45	,Nand Singh Rajawat,500,,,");
   list.push("	Villa-46	,Vikas Mahala,,,,");
   list.push("	Villa-47	,Manoj,,,,");
   list.push("	Villa-48	,,,,,");
