--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -144,7 +144,7 @@
      list.push("Villa-42,@Prakash Gaur,@9887444483,@Owner"); 
      list.push("Villa-43,@Arun Tripathi,@8003068888,@Owner"); 
      list.push("Villa-44,@Ravindra Verma,@9928309236,@Owner"); 
-     list.push("Villa-45,@Nandsingh Rajawat,@9928438888,@Owner"); 
+     list.push("Villa-45,@Nand Singh Rajawat,@9928438888,@Owner"); 
      list.push("Villa-46,@Vikas Mahala,@8561811965,@Owner"); 
      list.push("Villa-47,@Manoj ,@9460070338,@Owner"); 
      list.push("Villa-52,@Shailesh Bansal,@9461856524,@Owner"); 
