--- a/VehicleOwner.html
+++ b/VehicleOwner.html
@@ -142,7 +142,7 @@
      list.push("Villa-42,@Prakash Gaur,@"); 9887444483
      list.push("Villa-43,@Arun Tripathi,@RJ45-CS-3351"); 8003068888
      list.push("Villa-44,@Ravindra Verma,@RJ01-CE-0223"); 9928309236
-     list.push("Villa-45,@Nandsingh Rajawat,@RJ14-CH-4622"); 9928438888
+     list.push("Villa-45,@Nand Singh Rajawat,@RJ14-CH-4622"); 9928438888
      list.push("Villa-46,@Vikas Mahala,@RJ18-CB-9459"); 8561811965
      list.push("Villa-47,@Manoj ,@"); 9460070338
      list.push("Villa-52,@Shailesh Bansal,@RJ45-CL-1120"); 9461856524
