--- a/index.html
+++ b/index.html
@@ -180,21 +180,25 @@
 			<h2>OUR ACTIVITY</h2>
 			<p>Shubh Villa 'Festival & Celebrations'.</p>
 			<div class="container">
-				<h4 font size="8"style="color: rgb(47, 11, 226)"> Following festival were identified for celebration in society</div></H4>
+				<div align="left" ">
+					<h4 font size="8"style="color: rgb(47, 11, 226)"> Following festival were identified for celebration in society</div></H4>
 
-				<p style="color: rgb(6, 151, 38)">1.	Paush Bada (Any date between 1st of JAN to 14th JAN) [Menu Halwa+Bada+Puri+Sabji for colony members and dona Prasadi for others]</p>
-				<p style="color: rgb(6, 151, 38)">2.	Republic day: Flag hoisting and laddu distribution</p>
-				<p style="color: rgb(6, 151, 38)">3.	Mahashivaratri: Mandir decoration and Pooja </p>
-				<p style="color: rgb(6, 151, 38)">4.	Holi Milan: Combined Holi celebration (Color and Thandai to be arranged by cultural committee)+Dinner+ DJ</p>
-				<p style="color: rgb(6, 151, 38)">5.	Ramnavmi Chetra: decoration and panchamrat and dona prasadi</p>
-				<p style="color: rgb(6, 151, 38)">6.	Van mahotsav : Tree plantation by kids in colony aur near by area in first week of July</p>
-				<p style="color: rgb(6, 151, 38)">7.	Janmashtami : Mandir decoration +Panchaarat and dona prasadi</p>
-				<p style="color: rgb(6, 151, 38)">8.	Independence day: Flag hoisting and laddu distribution</p>
-				<p style="color: rgb(6, 151, 38)">9.	Ganesh Chaturthi : Ganesh Sthapna for 1 day and visarjan with DJ</p>
-				<p style="color: rgb(6, 151, 38)">10.	Vijayadashmi/Dussehara : Rawan Dahan</p>
-				<p style="color: rgb(6, 151, 38)">11.	Dipawali Milan : Annakut mhotsav within 15 days from diwali </p>
+					<p style="color: rgb(151, 6, 83)" >1.	Paush Bada (Any date between 1st of JAN to 14th JAN) [Menu Halwa+Bada+Puri+Sabji for colony members and dona Prasadi for others]</p>
+					<p style="color: rgb(6, 151, 38)">2.	Republic day: Flag hoisting and laddu distribution</p>
+					<p style="color: rgb(6, 151, 38)">3.	Mahashivaratri: Mandir decoration and Pooja </p>
+					<p style="color: rgb(151, 6, 83)">4.	Holi Milan: Combined Holi celebration (Color and Thandai to be arranged by cultural committee)+Dinner+ DJ</p>
+					<p style="color: rgb(6, 151, 38)">5.	Ramnavmi Chetra: decoration and panchamrat and dona prasadi</p>
+					<p style="color: rgb(6, 151, 38)">6.	Van mahotsav : Tree plantation by kids in colony aur near by area in first week of July</p>
+					<p style="color: rgb(6, 151, 38)">7.	Janmashtami : Mandir decoration +Panchaarat and dona prasadi</p>
+					<p style="color: rgb(6, 151, 38)">8.	Independence day: Flag hoisting and laddu distribution</p>
+					<p style="color: rgb(6, 151, 38)">9.	Ganesh Chaturthi : Ganesh Sthapna for 1 day and visarjan with DJ</p>
+					<p style="color: rgb(6, 151, 38)">10.	Vijayadashmi/Dussehara : Rawan Dahan</p>
+					<p style="color: rgb(151, 6, 83)">11.	Dipawali Milan : Annakut mhotsav within 15 days from diwali </p>
+
+				</div>
 
 				<div class="row">
+
 					<div class="col-md-4 col-xs-12">
 						<div class="single-Promo">
 							<div class="promo-icon">
