--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -142,7 +142,7 @@
   list.push("	Villa-4	,Bhupesh Saini,,,,");
   list.push("	Villa-5	,,,,,");
   list.push("	Villa-6	,,,,,");
-  list.push("	Villa-7	,Rahul Panday,,,,");
+  list.push("	Villa-7	,Rahul Pandey,,,,");
   list.push("	Villa-8	,,,,,");
   list.push("	Villa-9	,Raghvendra Sharma,,,,");
   list.push("	Villa-10	,Jogendra Sachdeva,,,,");
@@ -206,7 +206,7 @@
   list.push("	Villa-68	,Shrish Jaiman,,,,");
   list.push("	Villa-69	,Piyush,,,,");
   list.push("	Villa-70	,,,,,");
-  list.push("	Villa-71	,,,,,");
+  list.push("	Villa-71	,Suresh kumar Sharma,,,,");
   list.push("	Villa-72	,,,,,");
   list.push("	Villa-73	,Richa Sharma,,,,");
   list.push("	Villa-74	,,,,,");
