--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -129,7 +129,7 @@
   
 
      list.push("Villa-04,@Bhupesh Saini,@9829325960,@Owner"); 
-     list.push("Villa-07,@Rahul Panday,@9672125813,@Owner"); 
+     list.push("Villa-07,@Rahul Pandey,@9672125813,@Owner"); 
      list.push("Villa-09,@Raghvendra Sharma,@7976767857,@Owner"); 
      list.push("Villa-10,@Jogendra Sachdeva,@9828080386,@Owner"); 
      list.push("Villa-12,@Gaurav Kothari,@9982567222,@Owner"); 
@@ -153,6 +153,7 @@
      list.push("Villa-67,@Abhishek Jaiman,@9414054353,@Owner"); 
      list.push("Villa-68,@Shrish Jaiman,@9887629361,@Owner"); 
      list.push("Villa-69,@Piyush,@9828487854,@Owner"); 
+     list.push("Villa-71,@Suresh kumar Sharma,@8875115223,@Owner"); 
      list.push("Villa-73,@Richa Sharma,@9811547001,@Owner"); 
     
       
