--- a/VehicleOwner.html
+++ b/VehicleOwner.html
@@ -127,7 +127,7 @@
     function getOwnerDetails(){
      var list = [];
      list.push("Villa-04,@Bhupesh Saini,@RJ06-CB-4279"); 9829325960
-     list.push("Villa-07,@Rahul Panday,@RJ45-CJ-2141"); 9672125813
+     list.push("Villa-07,@Rahul Pandey,@RJ45-CJ-2141"); 9672125813
      list.push("Villa-09,@Raghvendra Sharma,@RJ45-CJ-9296"); 7976767857
      list.push("Villa-10,@Jogendra Sachdeva,@RJ45-CP-8446"); 9828080386
      list.push("Villa-12,@Gaurav Kothari,@RJ14-CX-9887"); 9982567222
@@ -144,12 +144,13 @@
      list.push("Villa-44,@Ravindra Verma,@RJ01-CE-0223"); 9928309236
      list.push("Villa-45,@Nand Singh Rajawat,@RJ14-CH-4622"); 9928438888
      list.push("Villa-46,@Vikas Mahala,@RJ18-CB-9459"); 8561811965
-     list.push("Villa-47,@Manoj ,@"); 9460070338
+     list.push("Villa-47,@Manoj ,@RJ14-QC-4216"); 9460070338
      list.push("Villa-52,@Shailesh Bansal,@RJ45-CL-1120"); 9461856524
      list.push("Villa-53,@Rohit Jain,@RJ45-CO-1142"); 9828576337
      list.push("Villa-65,@Jalaj Rajpurohit,@MH-46-BK-8091");
      list.push("Villa-67,@Abhishek Jaiman,@RJ14-BH-9719"); 9414054353
      list.push("Villa-68,@Shrish Jaiman,@RJ14-ZC-0181"); 9887629361
+     list.push("Villa-71,@Suresh kumar Sharma,@RJ45-CL-6128"); 8875115223
     
 
 
