--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -134,6 +134,7 @@
      list.push("Villa-10,@Jogendra Sachdeva,@9828080386,@Owner"); 
      list.push("Villa-12,@Gaurav Kothari,@9982567222,@Owner"); 
      list.push("Villa-13,@Anil Sharma,@9983344889,@Owner"); 
+     list.push("Villa-20,@ Ved Prakash Parashar,@9462071435,@Owner"); 
      list.push("Villa-24,@Abhimanyu Saraswat,@9461594523,@Owner"); 
      list.push("Villa-26,@Rakesh Kumar,@9079205061,@Owner"); 
      list.push("Villa-27,@Deepesh Sharma,@9829192929,@Owner"); 
