--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -207,7 +207,7 @@
   list.push("	Villa-69	,Piyush,,,,");
   list.push("	Villa-70	,,,,,");
   list.push("	Villa-71	,Suresh kumar Sharma,,,,");
-  list.push("	Villa-72	,,,,,");
+  list.push("	Villa-72	,Nikesh Chaudhary,,,,");
   list.push("	Villa-73	,Richa Sharma,,,,");
   list.push("	Villa-74	,,,,,");
   list.push("	Villa-75	,,,,,");
