--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -157,6 +157,7 @@
      list.push("Villa-71,@Suresh kumar Sharma,@8875115223,@Owner"); 
      list.push("Villa-72,@Nikesh Chaudhary,@9828030761,@Owner"); 
      list.push("Villa-73,@Richa Sharma,@9811547001,@Owner"); 
+     list.push("Villa-88,@Pankaj Chauhan,@9772525987,@Owner"); 
      
       
      generateTable(list)
