--- a/index.html
+++ b/index.html
@@ -124,15 +124,9 @@
 							<!-- <p> * Water Supply Timing:  <script> document.write(new date.toLocaleDateString('en-GB', {  day: 'numeric', month: 'short', year: 'numeric'}).replace(/ /g, '-')); </script></p> -->
 
 							<p></p>
-							<p>
-								<!--   Morning 2 Full water Tank (Around 6:00 AM To 8:00 AM)  & Sunday water start timing is 7:00 AM. -->
-							</p>
-							<p>
-								<!--  Evening 2 Half water Tank (Around 7:00 PM To 8:00 PM)  -->
-							</p>
 
-							<p style="color: rgb(6, 151, 38)"> Adhyaksha - ABC ji </p>
-							<p style="color: rgb(6, 151, 38)"> Upadhyaksha - XYZ ji </p>
+							<p style="color: rgb(6, 151, 38)"> Adhyaksha - ABC Ji </p>
+							<p style="color: rgb(6, 151, 38)"> Upadhyaksha - XYZ Ji </p>
 							<p style="color: rgb(6, 151, 38)"> koshaadhyaksha - MNO Ji </p>
 							<!--
 								<p> Daily Water Supply Timing </p>
