--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
         </div>-->
         
        <!-- <img class="NO-CACHE" data-src="img/WaterTiming.jpg" alt="" style="margin-bottom: 22px;">-->
-        
+	   <marquee  scrollamount="5" style= "color:rgb(194, 5, 93) ; font-size:20px" height="30px" > 
+		Upcoming January Month Celebration: 26 January, Republic Day  |  Paush Bada, Lunch \ Dinner (Menu: Halwa+Puri+Sabji)
+   </marquee>'
 		<section class="our_activity">
 			<div class="container">
 				<div class="row">
