--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -169,7 +169,7 @@
   list.push("	Villa-30	,,,,,");
   list.push("	Villa-31	,,,,,");
   list.push("	Villa-32	,,,,,");
-  list.push("	Villa-33	,Prakash Joshi,,,,");
+  list.push("	Villa-33	,Prakash Joshi,500,500,500,");
   list.push("	Villa-34	,Vijay Meena,,,,");
   list.push("	Villa-35	,,,,,");
   list.push("	Villa-36	,,,,,");
@@ -181,7 +181,7 @@
   list.push("	Villa-42	,,,,,");
   list.push("	Villa-43	,Arun Tripathi,,,,");
   list.push("	Villa-44	,Ravindra Verma,,,,,");
-  list.push("	Villa-45	,Nand Singh Rajawat,500,,,");
+  list.push("	Villa-45	,Nand Singh Rajawat,,,,");
   list.push("	Villa-46	,Vikas Mahala,,,,");
   list.push("	Villa-47	,Manoj,,,,");
   list.push("	Villa-48	,,,,,");
@@ -201,7 +201,7 @@
   list.push("	Villa-62	,,,,,");
   list.push("	Villa-63	,,,,,");
   list.push("	Villa-64	,,,,,");
-  list.push("	Villa-65	,Jalaj Rajpurohit,500,,,");
+  list.push("	Villa-65	,Jalaj Rajpurohit,500,500,500,");
   list.push("	Villa-66	,,,,,");
   list.push("	Villa-67	,Abhishek Jaiman,,,,");
   list.push("	Villa-68	,Shrish Jaiman,,,,");
