--- a/VehicleOwner.html
+++ b/VehicleOwner.html
@@ -81,8 +81,8 @@
             <th>Sr. No</th>
             <th>Villa No.</th>
             <th>Villa Owner</th>
-            <th>4 wheeler Vehical</th>
-            <th>2 wheeler Vehical</th>
+            <th>4-wheeler Vehical</th>
+            <th>2-wheeler Vehical</th>
         </thead>
         <tbody></tbody>
         </table>
