--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -97,6 +97,8 @@
 		<th>Feb</th>
 		<th>Mar</th>
 		<th>Apr</th>
+		<th>May</th>
+		<th>Jun</th>
 	</thead>
 	<tbody></tbody>
 	</table>
@@ -182,7 +184,7 @@
   list.push("	Villa-42	,,,,,");
   list.push("	Villa-43	,Arun Tripathi,,,,");
   list.push("	Villa-44	,Ravindra Verma,,,,,");
-  list.push("	Villa-45	,Nand Singh Rajawat,,,,");
+  list.push("	Villa-45	,Nand Singh Rajawat,500,500,500,");
   list.push("	Villa-46	,Vikas Mahala,,,,");
   list.push("	Villa-47	,Manoj,,,,");
   list.push("	Villa-48	,,,,,");
