--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -212,7 +212,7 @@
   list.push("	Villa-70	,,,,,,,");
   list.push("	Villa-71	,Suresh kumar Sharma,,,,,,");
   list.push("	Villa-72	,Nikesh Chaudhary,,,,,,");
-  list.push("	Villa-73	,Richa Sharma,,,,,,");
+  list.push("	Villa-73	,Richa Sharma,500,500,500,,,");
   list.push("	Villa-74	,,,,,,,");
   list.push("	Villa-75	,,,,,,,");
   list.push("	Villa-76	,,,,,,,");
