--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -149,16 +149,21 @@
      list.push("Villa-44,@Ravindra Verma,@9928309236,@3,@Owner"); 
      list.push("Villa-45,@Nand Singh Rajawat,@9928438888,@3,@Owner"); 
      list.push("Villa-46,@Vikas Mahala,@8561811965,@3,@Owner"); 
-     list.push("Villa-47,@Manoj ,@9460070338,@3,@Owner"); 
+     list.push("Villa-47,@Manoj Ji,@9460070338,@4,@Owner"); 
+     list.push("Villa-48,@R C Sharma ,@7737061033,@5,@Owner"); 
      list.push("Villa-52,@Shailesh Bansal,@9461856524,@3,@Owner"); 
      list.push("Villa-53,@Rohit Jain,@9828576337,@3,@Owner"); 
+     list.push("Villa-63,@Yogesh Ji,@8583956466,@4,@Owner"); 
+     list.push("Villa-64,@Sahil Meghnani,@9929080804,@2,@Owner");
      list.push("Villa-65,@Jalaj Rajpurohit,@9820684534,@3,@Owner");
      list.push("Villa-67,@Abhishek Jaiman,@9414054353,@4,@Owner"); 
      list.push("Villa-68,@Shrish Jaiman,@9887629361,@4,@Owner"); 
-     list.push("Villa-69,@Piyush,@9828487854,@5,@Owner"); 
+     list.push("Villa-69,@Piyush Ji,@9828487854,@5,@Owner"); 
+     list.push("Villa-70,@Vineet Sharma,@7014547926,@3,@Owner"); 
      list.push("Villa-71,@Suresh kumar Sharma,@8875115223,@3,@Owner"); 
      list.push("Villa-72,@Nikesh Chaudhary,@9828030761,@3,@Owner"); 
      list.push("Villa-73,@Richa Sharma,@9811547001,@2,@Owner"); 
+     list.push("Villa-86,@Surendra Agrawal,@9414002683,@3,@Owner"); 
      list.push("Villa-88,@Pankaj Chauhan,@9772525987,@3,@Owner"); 
      
       
